crates/pg_syntax/tests/snapshots/postgres_regress/json@408.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from json_to_record('{\"out\": {\"key\": 1}}') as x(out jsonb);"
---
SelectStmt@0..68
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeFunction@14..66
    List@14..50
      FuncCall@14..50
        Ident@14..28 "json_to_record"
        Ascii40@28..29 "("
        AConst@29..50
          Sconst@29..50 "'{\"out\": {\"key\": 1}}'"
    Ascii41@50..51 ")"
    Whitespace@51..52 " "
    Alias@52..56
      As@52..54 "as"
      Whitespace@54..55 " "
      Ident@55..56 "x"
    Ascii40@56..57 "("
    ColumnDef@57..66
      OutP@57..60 "out"
      Whitespace@60..61 " "
      TypeName@61..66
        Ident@61..66 "jsonb"
  Ascii41@66..67 ")"
  Ascii59@67..68 ";"

