crates/pg_syntax/tests/snapshots/postgres_regress/json@412.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select json_strip_nulls('1');"
---
SelectStmt@0..29
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..27
    FuncCall@7..27
      Ident@7..23 "json_strip_nulls"
      Ascii40@23..24 "("
      AConst@24..27
        Sconst@24..27 "'1'"
  Ascii41@27..28 ")"
  Ascii59@28..29 ";"

