crates/pg_syntax/tests/snapshots/postgres_regress/json@414.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select json_strip_nulls('null');"
---
SelectStmt@0..32
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..30
    FuncCall@7..30
      Ident@7..23 "json_strip_nulls"
      Ascii40@23..24 "("
      AConst@24..30
        Sconst@24..30 "'null'"
  Ascii41@30..31 ")"
  Ascii59@31..32 ";"

