crates/pg_syntax/tests/snapshots/postgres_regress/json@415.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select json_strip_nulls('[1,2,null,3,4]');"
---
SelectStmt@0..42
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..40
    FuncCall@7..40
      Ident@7..23 "json_strip_nulls"
      Ascii40@23..24 "("
      AConst@24..40
        Sconst@24..40 "'[1,2,null,3,4]'"
  Ascii41@40..41 ")"
  Ascii59@41..42 ";"

