crates/pg_syntax/tests/snapshots/postgres_regress/json@416.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select json_strip_nulls('{\"a\":1,\"b\":null,\"c\":[2,null,3],\"d\":{\"e\":4,\"f\":null}}');"
---
SelectStmt@0..80
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..78
    FuncCall@7..78
      Ident@7..23 "json_strip_nulls"
      Ascii40@23..24 "("
      AConst@24..78
        Sconst@24..78 "'{\"a\":1,\"b\":null,\"c\": ..."
  Ascii41@78..79 ")"
  Ascii59@79..80 ";"

